Adding source files

--- a/BowlingScoreCalculatorFrontend/Pages/Index.cshtml
+++ b/BowlingScoreCalculatorFrontend/Pages/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@page
-@model IndexModel
+@model BowlingScoreCalculatorFrontend.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Bowling Score Calculator.</p>
+    <p>
+        <a href="/Register" class="btn btn-primary">Register</a>
+        <a href="/Login" class="btn btn-secondary">Login</a>
+    </p>
 </div>
